update version number in prep of new release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,8 +6,8 @@ sox-11gamma, followed by a list of prior authors and features.
 
 
 
-sox-x.x.x	xxxx-xx-xx
----------
+sox-14.3.2	2011-xx-xx
+----------
 
 File formats:
 
