Fix -w option on stats.

--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@ Audio device drivers:
 Effects:
 
   o F.R. [3051700] spectrogram -r for `raw' spectrogram, no legend.  (robs)
+  o Fix -w option on stats effect. (Ronald Sprouse)
 
 Other new features:
 
