--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
 We are happy to announce the release of SoX 14.3.2.
  
-Source code, Win32 binaries, and Mac OSX binaries can be downloaded from 
-  https://sourceforge.net/project/showfiles.php?group_id=10706
+Source code, Win32 binaries in ZIP file, Win32 Installer, and 
+Mac OS X binaries can be downloaded from:
+
+  https://sourceforge.net/projects/sox/files/
  
 Primarily a maintenance release, highlights include:
 
@@ -10,11 +12,11 @@ Primarily a maintenance release, highlights include:
   o Fix length error in 24-bit RIFF files.
   o Add default channel mapping to 24-bit RIFF files.
   o Fix ffmpeg crashes on some CPU's.
-  o Fix segfaults on OSX playback.  Recording now works on OSX.  
+  o Fix segfaults on Mac OS X playback.  Recording now works on OSX.  
   o Various fixes and improvements related to compiling.
 
 For the complete list of changes, see the ChangeLog at
-  http://sox.cvs.sourceforge.net/sox/sox/ChangeLog?revision=SOX_14_3_2&view=markup
+  http://sox.cvs.sourceforge.net/sox/sox/ChangeLog?revision=SOX_14_3_2
 
 Thanks to all who contributed to this release.
 
