Clarify biquad numerator and denominator in manpage as per user request.

--- a/sox.1
+++ b/sox.1
@@ -1614,7 +1614,8 @@ in place of
 .BR gain\ 1 .
 .TP
 \fBbiquad \fIb0 b1 b2 a0 a1 a2\fR
-Apply a biquad IIR filter with the given coefficients.
+Apply a biquad IIR filter with the given coefficients. Where b* and a* are
+the numerator and denominator coefficients respectively.
 .SP
 See http://en.wikipedia.org/wiki/Digital_biquad_filter (where a0 = 1).
 .TP
