--- a/ChangeLog
+++ b/ChangeLog
@@ -56,7 +56,8 @@ Internal improvements:
     (Doug Cook)
   o cmake now compiles waveaudio driver under windows environment. (cbagwell)
     [3072672]
-
+  o Optionally look for png.h in libpng directory to support OpenBSD
+    packaging.
 
 sox-14.3.1	2010-04-11
 ----------
