--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,10 @@ Effects:
   o F.R. [3051700] spectrogram -r for `raw' spectrogram, no legend.  (robs)
   o Fix -w option on stats effect. (Ronald Sprouse)
   o Fix segfault with some ladspa plugins (Thor Andreassen)
+  o Optionally look for png.h in libpng directory to support OpenBSD
+    packaging.  Helps enable spectrograph effect.
+  o libpng15 requires application to include zlib.h header file.
+    Add this to spectrograph effect. [3184238]
 
 Other new features:
 
@@ -56,8 +60,6 @@ Internal improvements:
     (Doug Cook)
   o cmake now compiles waveaudio driver under windows environment. (cbagwell)
     [3072672]
-  o Optionally look for png.h in libpng directory to support OpenBSD
-    packaging.
 
 sox-14.3.1	2010-04-11
 ----------
