Add release script to automate as much as possible.

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 We are happy to announce the release of SoX 14.3.2.
  
-Source code, Win32 binaries in ZIP file, Win32 Installer, and 
+Source code, Win32 binaries in ZIP archive, Win32 Installer, and 
 Mac OS X binaries can be downloaded from:
 
-  https://sourceforge.net/projects/sox/files/
+  https://sourceforge.net/projects/sox/files/sox/14.3.2
  
 Primarily a maintenance release, highlights include:
 
