Document the multiple combine method in man and usage output. Patch by Ulrich Klauer.

--- a/ChangeLog
+++ b/ChangeLog
@@ -62,6 +62,8 @@ Effects:
 Other new features:
 
   o Soxi now reports duration of AMR files.  (robs)
+  o Document the "multiple" combine option in man pages and in
+    usage output (Ulrich Klauer).
 
 Internal improvements:
 
