--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@ This file contains a list of all changes starting after the release of
 sox-11gamma, followed by a list of prior authors and features.
 
 
-sox-14.3.2	2011-xx-xx
+sox-14.3.2	2011-02-27
 ----------
 
 File formats:
