--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,13 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma, followed by a list of prior authors and features.
 
+sox-14.4.0	20xx-xx-xx
+----------
+
+Effects:
+
+  o Improvements to man pages for tempo effect.  Really made in 14.3.2.
+    (Jim Harkins).
 
 sox-14.3.2	2011-02-27
 ----------
