Add changelog for sox_globals.use_threads

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,9 @@ Effects:
 
   o Improvements to man pages for tempo effect.  Really made in 14.3.2.
     (Jim Harkins).
+  o Added use_threads variable to sox_globals. This should be used to enable
+    or disable use of parallel effects processing instead of directly calling
+	omp_set_num_threads. (Doug Cook)
 
 sox-14.3.2	2011-02-27
 ----------
