tempo does not involve a rate change

--- a/sox.1
+++ b/sox.1
@@ -2777,11 +2777,10 @@ c8 c8 c.
 .DT
 .SP
 The
-.BR pitch ,
-.B speed
+.B pitch
 and
-.B tempo
-effects all use the
+.B speed
+effects use the
 .B rate
 effect at their core.
 .TP
