Asterisk raw format

--- a/soxformat.7
+++ b/soxformat.7
@@ -556,6 +556,10 @@ IRCAM SDIF (Institut de Recherche et Coordination Acoustique/Musique
 Sound Description Interchange Format). Used by academic music software
 such as the CSound package, and the MixView sound sample editor.
 .TP
+\&\fB.sln\fR
+Asterisk PBX `signed linear' 8khz, 16-bit signed integer, little-endian
+raw format.
+.TP
 \&\fB.sph\fR, \fB.nist\fR (also with \fB\-t sndfile\fR)
 SPHERE (SPeech HEader Resources) is a file format defined by NIST
 (National Institute of Standards and Technology) and is used with
