--- a/sox.1
+++ b/sox.1
@@ -4011,7 +4011,7 @@ and any found quieter/shorter bursts.
 \ 
 .I Advanced Options:
 .br
-These allow fine tuning of the alogithm's internal parameters.
+These allow fine tuning of the algorithm's internal parameters.
 .RS
 .IP \fB\-b\ \fInum\fR
 The algorithm (internally) uses adaptive noise estimation/reduction in
