Correct documentation for splice effect
The meaning of the -h and -t options had been exchanged in the man page.
Also, linear fade was erroneously called the default.

--- a/sox.1
+++ b/sox.1
@@ -3344,8 +3344,8 @@ One of the options
 .BR \-t ,
 or
 .B \-q
-may be given to select the fade envelope as triangular (a.k.a. linear)
-(the default), half-cosine wave, or quarter-cosine wave respectively.
+may be given to select the fade envelope as half-cosine wave (the default),
+triangular (a.k.a. linear), or quarter-cosine wave respectively.
 .TS
 center;
 cI lI lI lI
