Allow unlimited number of user effects for SoX
Remove the hard-wired MAX_USER_EFF limit on the number of user effects.
Memory is instead allocated dynamically.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@ Effects:
     file again. (cbagwell and Thor Andreassen)
   o Fix man page default error for splice effect. (Ulrich Klauer)
   o Enable support for -plot option on biquad effect. (Ulrich Klauer)
+  o Effect chain can now be unlimitted in length. (Ulrich Klauer)
 
 Misc:
 
