Fix documentation for unsigned-integer encoding

--- a/sox.1
+++ b/sox.1
@@ -1162,7 +1162,7 @@ PCM data stored as signed (`two's complement') integers.  Commonly used
 with a 16 or 24 \-bit encoding size.
 A value of 0 represents minimum signal power.
 .IP \fBunsigned-integer\fR
-PCM data stored as signed (`two's complement') integers.  Commonly used
+PCM data stored as unsigned integers.  Commonly used
 with an 8-bit encoding size.  A value of 0 represents maximum signal
 power.
 .IP \fBfloating-point\fR
