--- a/sox.1
+++ b/sox.1
@@ -1633,6 +1633,8 @@ Apply a biquad IIR filter with the given coefficients. Where b* and a* are
 the numerator and denominator coefficients respectively.
 .SP
 See http://en.wikipedia.org/wiki/Digital_biquad_filter (where a0 = 1).
+.SP
+This effect supports the \fB\-\-plot\fR global option.
 .TP
 \fBchannels \fICHANNELS\fR
 Invoke a simple algorithm to change the number of channels in
