fix effect pipeline and file length propogation
Lets fade work again when specifying a length from end of file.
Fix is based on work from Thor Andreassen.

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@ Effects:
   o Added use_threads variable to sox_globals. This should be used to enable
     or disable use of parallel effects processing instead of directly calling
     omp_set_num_threads. (Doug Cook)
+  o Fix to effects pipeline to let fade affect specify time from end of
+    file again. (cbagwell and Thor Andreassen)
 
 sox-14.3.2	2011-02-27
 ----------
