--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,7 @@ Effects:
   o Fix man page default error for splice effect. (Ulrich Klauer)
   o Enable support for -plot option on biquad effect. (Ulrich Klauer)
   o Effect chain can now be unlimitted in length. (Ulrich Klauer)
+  o Fix newfile/restart effects when merging or mixing files (Ulrich Klauer)
 
 Misc:
 
