Fix OSX coreaudio device name searches.  Would stop looking after 3rd device based on how device_count was computed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@ Audio device drivers:
   o Give pulseaudio driver higher priority than alsa or oss now that
     its proven stable and gives user more features; such as per app
     volume control. (cbagwell)
+  o Fix but when specifying OSX coreaudio device name.  Would only
+    search for first 3 devices. (cbagwell)
 
 Effects:
 
