Add support for floating point encodings in AIFF-C files
Both reading and writing AIFF-C files with 32-bit or 64-bit floating
point samples is enabled (compression types "fl32"/"FL32" and
"fl64"/"FL64").

This resolves feature request #3418119.

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ Previously deprecated features that have been removed in this release:
 File formats:
 
   o Mention in man pages that WAV files support floating point encodings.
+  o Add support for floating point encodings in AIFF-C files. (Ulrich Klauer)
 
 Audio device drivers:
 
