--- a/ChangeLog
+++ b/ChangeLog
@@ -39,7 +39,8 @@ Effects:
   o Fix man page default error for splice effect. (Ulrich Klauer)
   o Enable support for -plot option on biquad effect. (Ulrich Klauer)
   o Effect chain can now be unlimitted in length. (Ulrich Klauer)
-  o Fix newfile/restart effects when merging or mixing files (Ulrich Klauer)
+  o Fix newfile/restart effects when merging or mixing files. (Ulrich Klauer)
+  o Fix crashes in compand and mcompand effects. [3420893] (Ulrich Klauer)
 
 Misc:
 
