--- a/ChangeLog
+++ b/ChangeLog
@@ -34,7 +34,7 @@ Effects:
   o Added use_threads variable to sox_globals. This should be used to enable
     or disable use of parallel effects processing instead of directly calling
     omp_set_num_threads. (Doug Cook)
-  o Fix to effects pipeline to let fade affect specify time from end of
+  o Fix to effects pipeline to let fade effect specify time from end of
     file again. (cbagwell and Thor Andreassen)
   o Fix man page default error for splice effect. (Ulrich Klauer)
   o Enable support for -plot option on biquad effect. (Ulrich Klauer)
@@ -47,6 +47,10 @@ Misc:
   o Fixed man page description for unsigned samples and change
     CVS to git references. (Ulrich Klauer)
   o When using pipes (-p) on Windows, set file mode to binary. (cbagwell)
+
+Other bug fixes:
+
+  o Fix several memory leaks. [3309913] (Jin-Myung Won and Ulrich Klauer)
 
 sox-14.3.2	2011-02-27
 ----------
