delay effect: Allow a delay to be more than the input length
The delay effect would fail ("drained asymmetrically!") when a specified
delay was more than the input length, e.g.
  play stereo.wav trim 0 1 delay 0 2
In this special case, drain() will now output additional silence such that
the specified delay is reached and all channels end simultaneously.

This resolves bug #3055399.

--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,8 @@ Effects:
   o Effect chain can now be unlimitted in length. (Ulrich Klauer)
   o Fix newfile/restart effects when merging or mixing files. (Ulrich Klauer)
   o Fix crashes in compand and mcompand effects. [3420893] (Ulrich Klauer)
+  o Let the delay effect gracefully handle the special case that a delay can
+    be more than the input length. [3055399] (Ulrich Klauer)
 
 Misc:
 
