WAV format: pad to an even number of data bytes
The RIFF spec calls for "a pad byte with value zero" at the end of
chunks that would otherwise contain an odd number of bytes; this
byte is not to be included in the chunk size.

This resolves bug #3203418.

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@ File formats:
 
   o Mention in man pages that WAV files support floating point encodings.
   o Add support for floating point encodings in AIFF-C files. (Ulrich Klauer)
+  o Pad WAV data chunk to an even number of bytes (as required by the
+    specification). [3203418] (Ulrich Klauer)
 
 Audio device drivers:
 
