--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,18 @@
-sox (14.3.2-2cvs1) UNRELEASED; urgency=low
+sox (14.3.2-4cvs1) UNRELEASED; urgency=low
 
   * CVS Version.
   * [debian/patches/01_transition_to_libav.patch]:
     - Removed, fixed upstream.
 
- -- Pascal Giard <evilynux@gmail.com>  Mon, 22 Aug 2011 00:47:21 -0400
+ -- Pascal Giard <evilynux@gmail.com>  Sat, 10 Dec 2011 23:53:51 -0500
+
+sox (14.3.2-3) unstable; urgency=low
+
+  * [debian/control]:
+    - Added armhf to architectures for which libsox-fmt-alsa should be built,
+      thanks to Konstantinos Margaritis (closes: #645397).
+
+ -- Pascal Giard <pascal@debian.org>  Sat, 10 Dec 2011 23:53:50 -0500
 
 sox (14.3.2-2) unstable; urgency=low
 
